--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "mariadb": "^2.5.0",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "slugify": "^1.4.5"
   }
 }
